Widgets, screen responsive, itd

--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -208,8 +208,10 @@
 
     <Grid Background="#FF474747">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="121*"/>
-            <ColumnDefinition Width="686*"/>
+            <ColumnDefinition Width="287*"/>
+            <ColumnDefinition Width="435*"/>
+            <ColumnDefinition Width="702*"/>
+            <ColumnDefinition Width="488*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="53*"/>
@@ -225,18 +227,22 @@
             </Menu>
         </DockPanel>-->
 
-        <Grid Grid.Row="1" Grid.Column="0" Margin="20,66,20,10" Background="#FF5E5E5E" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <Grid Grid.Row="1" Grid.Column="0" Margin="20,66,20,10" Background="#FF5E5E5E" Grid.ColumnSpan="4" Grid.RowSpan="2">
             <ContentControl Content="{Binding CurrentMeshViewModel}"/>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,880,287" HorizontalAlignment="Right" Width="231" Height="27" VerticalAlignment="Bottom">Mesh Eletricity</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,920,588" HorizontalAlignment="Right" Width="237" Height="27" VerticalAlignment="Bottom">Mesh Power</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,84.6,403.6" HorizontalAlignment="Right" Width="141" Height="27" VerticalAlignment="Bottom">Fluid Level</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,54.6,587.6" HorizontalAlignment="Right" Width="233" Height="27" VerticalAlignment="Bottom">Water Presure</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,632,729" HorizontalAlignment="Right" Width="151" Height="27" VerticalAlignment="Bottom">Grid Eletricity</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,637,758" HorizontalAlignment="Right" Width="146" Height="27" VerticalAlignment="Bottom">Grid Power</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,181,404" HorizontalAlignment="Right" Width="141" Height="27" VerticalAlignment="Bottom">Fluid Level</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,129,740" HorizontalAlignment="Right" Width="233" Height="27" VerticalAlignment="Bottom">Water Presure</Label>
+            <TextBox HorizontalAlignment="Left" Height="23" Margin="1240,60,0,0" TextWrapping="Wrap" Text="{Binding GridPower}" VerticalAlignment="Top" Width="42"/>
+            <TextBox HorizontalAlignment="Left" Height="25" Margin="1240,90,0,0" TextWrapping="Wrap" Text="{Binding GridElectricity}" VerticalAlignment="Top" Width="42" RenderTransformOrigin="0.619,-0.68"/>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,1306,459" HorizontalAlignment="Right" Width="151" Height="27" VerticalAlignment="Bottom">AM Cos Phi</Label>
+
         </Grid>
 
         <!--<Canvas Background="#FF474747" Margin="10,152,20,35" Grid.Row="2" Grid.RowSpan="2" Grid.ColumnSpan="2"/>-->
 
-        <Label Content="{Binding PubSub}" Margin="10,111,10,0" Grid.Row="1" VerticalAlignment="Top" Height="10" Grid.ColumnSpan="2"/>
-        <StatusBar Margin="10,11,10,0" Grid.Row="3" Grid.ColumnSpan="2">
+        <Label Content="{Binding PubSub}" Margin="10,111,10,0" Grid.Row="1" VerticalAlignment="Top" Height="10" Grid.ColumnSpan="4"/>
+        <StatusBar Margin="10,11,10,0" Grid.Row="3" Grid.ColumnSpan="4">
             <StatusBarItem>
                 <Label Content="{Binding TimeStampStatusBar}"   />
             </StatusBarItem>
@@ -250,23 +256,23 @@
             </StatusBarItem>
         </StatusBar>
 
-        <Button  Content="Telemetry Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="585,29,0,0" VerticalAlignment="Top" Width="145" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#258565" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
-        <Button  Content="Alarm Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Alarm" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="770,29,0,0" VerticalAlignment="Top" Width="116" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFFF6D6D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
-        <Button  Content="Event Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="924,29,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#326492" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
+        <Button  Content="Telemetry Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="150,29,0,0" VerticalAlignment="Top" Width="145" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#258565" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="2"/>
+        <Button  Content="Alarm Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Alarm" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="335,29,0,0" VerticalAlignment="Top" Width="116" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFFF6D6D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="2"/>
+        <Button  Content="Event Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="489,29,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#326492" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="2"/>
         <Label Content="Select Substation" HorizontalAlignment="Left" Margin="20,10,0,0" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="38" Width="292" RenderTransformOrigin="0.5,0.5" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="18" Grid.ColumnSpan="2"/>
 
-        <Label Content="Transformer Tap Changer" FontFamily="Consolas" Foreground="Yellow" FontSize="14" Margin="607.4,353.8,490.6,166.8" Grid.Column="1" Grid.Row="1"></Label>
+        <Label Content="Transformer Tap Changer" FontFamily="Consolas" Foreground="Yellow" FontSize="14" Margin="438,354,55,280" Grid.Column="2" Grid.Row="1"></Label>
         <lvc:AngularGauge Grid.Row="1" Value="{Binding TransformerTapChanger}" FromValue="-7" ToValue="7" 
                           LabelsStep="1" TicksStep="1" Wedge="300"
                           TicksForeground="Black" Foreground="Black" FontSize="10" 
-                          SectionsInnerRadius="0.5" Margin="607.4,387.8,505.6,54.8" Grid.Column="1">
+                          SectionsInnerRadius="0.5" Margin="386,388,18,55" Grid.Column="2">
             <lvc:AngularGauge.Sections>
                 <lvc:AngularSection FromValue="-7" ToValue="7" Fill="#FFDDA417"/>
             </lvc:AngularGauge.Sections>
         </lvc:AngularGauge>
 
         <lvc:Gauge Grid.Row="1"
-                   From="0" To="1000" Value="{Binding GaugeClasic}" Margin="974,139,63,280" Grid.Column="1">
+                   From="0" To="1000" Value="{Binding WaterPresureWidget}" Margin="34,158,74,307" Grid.Column="3">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FF00FFE8" Offset="0.0" />
@@ -276,16 +282,16 @@
             </lvc:Gauge.GaugeActiveFill>
         </lvc:Gauge>
 
-        <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="1043.4,334.8,97.6,102.8"
+        <lvc:Gauge Grid.Row="1" Grid.Column="3" Margin="12,524,74,191"
                    Uses360Mode="True"
                    From="0" To="100" Value="{Binding GaugeValue}"
                    HighFontSize="20" Foreground="White"
-                   InnerRadius="0" GaugeBackground="#7F549EE9"/>
+                   InnerRadius="0" GaugeBackground="#7F549EE9" Grid.RowSpan="2"/>
 
 
 
         <lvc:Gauge Grid.Row="1"
-            From="0" To="1000" Value="{Binding GaugeClasic}" Margin="131,447,906,162" Grid.Column="1" Grid.RowSpan="2">
+            From="0" To="1" Value="{Binding GaugeClasic1}"  Margin="103,447,74,55" Grid.Column="1">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FFFFE800" Offset="0.0" />
@@ -295,7 +301,7 @@
             </lvc:Gauge.GaugeActiveFill>
         </lvc:Gauge>
         <lvc:Gauge Grid.Row="1"
-            From="0" To="1000" Value="{Binding GaugeClasic}" Margin="131,139,906,280" Grid.Column="1">
+            From="0" To="1" Value="{Binding GaugeClasic2}" Opacity="{Binding GaugeClasicOpacity}" Margin="103,636,64,97" Grid.Column="1" Grid.RowSpan="2">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FF72FF53" Offset="0.0" />
@@ -304,7 +310,7 @@
                 </LinearGradientBrush>
             </lvc:Gauge.GaugeActiveFill>
         </lvc:Gauge>
-        <Canvas Background="#FF474747" Margin="20,57.8,1231.6,9.8" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <Canvas Background="#FF474747" Margin="20,58,410,10" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <DataGrid x:Name="dataGridSub"
             ItemsSource="{Binding SubstationsList , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding SelectedSubstation}" HorizontalAlignment="Left" CanUserResizeRows="False" HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Bottom" Height="551" Width="272" AutoGenerateColumns="False" IsReadOnly="True" FontFamily="Consolas" FontSize="14" Background="#66F0F0F0" Canvas.Left="-4" Canvas.Top="10">
@@ -339,7 +345,7 @@
             <Label Content="(search by)" FontFamily="Consolas" FontSize="11" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Canvas.Left="165" Canvas.Top="591" Height="26" Width="98" Foreground="#FF1B1B1B"/>
 
         </Canvas>
-        <Button  Content="Analytics" HorizontalAlignment="Left" Command="{Binding AnalyticsOpenCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="122,22,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFBB558D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
+        <Button  Content="Analytics" HorizontalAlignment="Left" Command="{Binding AnalyticsOpenCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="122,22,0,0" VerticalAlignment="Top" Width="118" FontFamily="Consolas" FontSize="16" Background="#FFBB558D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
 
         <!--<Border x:Name="AlarmBorder" Visibility="Visible" BorderBrush="Crimson" BorderThickness="10" HorizontalAlignment="Left" Height="820" Margin="0,0,0,0" VerticalAlignment="Top" Width="1512" Grid.RowSpan="3"></Border>-->
     </Grid>
