--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -227,10 +227,12 @@
 
         <Grid Grid.Row="1" Grid.Column="0" Margin="20,66,20,10" Background="#FF5E5E5E" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <ContentControl Content="{Binding CurrentMeshViewModel}"/>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,880,287" HorizontalAlignment="Right" Width="231" Height="27" VerticalAlignment="Bottom">Mesh Eletricity</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,920,588" HorizontalAlignment="Right" Width="237" Height="27" VerticalAlignment="Bottom">Mesh Power</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,84.6,403.6" HorizontalAlignment="Right" Width="141" Height="27" VerticalAlignment="Bottom">Fluid Level</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="0,0,54.6,587.6" HorizontalAlignment="Right" Width="233" Height="27" VerticalAlignment="Bottom">Water Presure</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="304,176,867,369" Height="27">Pump 1 power(w)</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="304,359,867,186" Height="27">Pump 2 power(w)</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,404,50,141" Height="27">Fluid Level(l)</Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="934,176,218,369" Height="27">Pump 1 Pressure(bar)</Label>
+            <Label HorizontalContentAlignment="Center" Content="Tap Changer position" FontFamily="Consolas" Foreground="Yellow" FontSize="14" Margin="874,404,254,141" Height="27"></Label>
+            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,176,38,369" Height="27" Content="Pump 2 Pressure(bar)"/>
         </Grid>
 
         <!--<Canvas Background="#FF474747" Margin="10,152,20,35" Grid.Row="2" Grid.RowSpan="2" Grid.ColumnSpan="2"/>-->
@@ -246,7 +248,7 @@
             </StatusBarItem>
             <Separator Grid.Column="1" />
             <StatusBarItem>
-                <Label  Content="SCADA SISTEM"  />
+                <Label  Content="SCADA SISTEM" Width="808"  />
             </StatusBarItem>
         </StatusBar>
 
@@ -255,18 +257,17 @@
         <Button  Content="Event Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="924,29,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#326492" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
         <Label Content="Select Substation" HorizontalAlignment="Left" Margin="20,10,0,0" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="38" Width="292" RenderTransformOrigin="0.5,0.5" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="18" Grid.ColumnSpan="2"/>
 
-        <Label Content="Transformer Tap Changer" FontFamily="Consolas" Foreground="Yellow" FontSize="14" Margin="607.4,353.8,490.6,166.8" Grid.Column="1" Grid.Row="1"></Label>
         <lvc:AngularGauge Grid.Row="1" Value="{Binding TransformerTapChanger}" FromValue="-7" ToValue="7" 
                           LabelsStep="1" TicksStep="1" Wedge="300"
                           TicksForeground="Black" Foreground="Black" FontSize="10" 
-                          SectionsInnerRadius="0.5" Margin="607.4,387.8,505.6,54.8" Grid.Column="1">
+                          SectionsInnerRadius="0.5" Margin="701,335,287,10" Grid.Column="1">
             <lvc:AngularGauge.Sections>
                 <lvc:AngularSection FromValue="-7" ToValue="7" Fill="#FFDDA417"/>
             </lvc:AngularGauge.Sections>
         </lvc:AngularGauge>
 
         <lvc:Gauge Grid.Row="1"
-                   From="0" To="1000" Value="{Binding GaugeClasic}" Margin="974,139,63,280" Grid.Column="1">
+                   From="0" To="100" Value="{Binding GaugeClasic}" Margin="924,335,64,10" Grid.Column="1">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FF00FFE8" Offset="0.0" />
@@ -276,16 +277,16 @@
             </lvc:Gauge.GaugeActiveFill>
         </lvc:Gauge>
 
-        <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="1043.4,334.8,97.6,102.8"
+        <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="770,111,267,234"
                    Uses360Mode="True"
-                   From="0" To="100" Value="{Binding GaugeValue}"
+                   From="0" To="50" Value="{Binding GaugePressure1}"
                    HighFontSize="20" Foreground="White"
                    InnerRadius="0" GaugeBackground="#7F549EE9"/>
 
 
 
         <lvc:Gauge Grid.Row="1"
-            From="0" To="1000" Value="{Binding GaugeClasic}" Margin="131,447,906,162" Grid.Column="1" Grid.RowSpan="2">
+            From="0" To="1000" Value="{Binding GaugePower2}" Margin="122,335,886,66" Grid.Column="1">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FFFFE800" Offset="0.0" />
@@ -295,7 +296,7 @@
             </lvc:Gauge.GaugeActiveFill>
         </lvc:Gauge>
         <lvc:Gauge Grid.Row="1"
-            From="0" To="1000" Value="{Binding GaugeClasic}" Margin="131,139,906,280" Grid.Column="1">
+            From="0" To="1000" Value="{Binding GaugePower1}" Margin="122,139,886,234" Grid.Column="1">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
                     <GradientStop Color="#FF72FF53" Offset="0.0" />
@@ -314,7 +315,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <StackPanel x:Name="SubstationsPanel" Height="693" Width="265" Canvas.Left="3">
+            <StackPanel x:Name="SubstationsPanel" Height="561" Width="265" Canvas.Left="3">
                 <ItemsControl FontFamily="Consolas" ItemsSource="{Binding RadioButtons}" FontSize="16">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -326,12 +327,12 @@
             <Button Content="Load substation" Command="{Binding LoadSubstationCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41"  VerticalAlignment="Top" Width="148" FontFamily="Consolas" FontSize="16" Background="#FFE8D856" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0" HorizontalAlignment="Right" Canvas.Left="73" Canvas.Top="-59"/>
             <TextBox Height="26" Canvas.Left="-4" TextWrapping="Wrap" Text="{Binding SearchTerm}" Canvas.Top="567" Width="156" FontFamily="Consolas" FontSize="16" Background="#FFEBEBEB"/>
             <ComboBox Canvas.Left="157" FontFamily="Consolas" SelectedIndex="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Canvas.Top="567" Width="113" Height="26" ItemsSource="{Binding Path=SearchType}" SelectedValue="{Binding Path=SearchTypeSelected}" />
-            <Button Content="" Command="{Binding SearchSubsCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="59"  VerticalAlignment="Top" Width="59" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0" HorizontalAlignment="Right" Canvas.Left="9" Canvas.Top="598">
+            <Button Content="" Command="{Binding SearchSubsCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="33"  VerticalAlignment="Top" Width="36" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0" HorizontalAlignment="Right" Canvas.Left="-4" Canvas.Top="598">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/search.png"/>
                 </Button.Background>
             </Button>
-            <Button Content="" Command="{Binding DissmisSubsCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="44"  VerticalAlignment="Top" Width="47" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0" HorizontalAlignment="Right" Canvas.Left="73" Canvas.Top="606">
+            <Button Content="" Command="{Binding DissmisSubsCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="25"  VerticalAlignment="Top" Width="28" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0" HorizontalAlignment="Right" Canvas.Left="32" Canvas.Top="606">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/dismiss.png"/>
                 </Button.Background>
@@ -340,6 +341,11 @@
 
         </Canvas>
         <Button  Content="Analytics" HorizontalAlignment="Left" Command="{Binding AnalyticsOpenCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="122,22,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFBB558D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
+        <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="952,111,86,234"
+            Uses360Mode="True"
+            From="0" To="50" Value="{Binding GaugePressure2}"
+            HighFontSize="20" Foreground="White"
+            InnerRadius="0" GaugeBackground="#7F549EE9"/>
 
         <!--<Border x:Name="AlarmBorder" Visibility="Visible" BorderBrush="Crimson" BorderThickness="10" HorizontalAlignment="Left" Height="820" Margin="0,0,0,0" VerticalAlignment="Top" Width="1512" Grid.RowSpan="3"></Border>-->
     </Grid>
