substation 2 widgets show/hide

--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="SCADA SISTEM" Height="{x:Static SystemParameters.PrimaryScreenHeight}" Width="{x:Static SystemParameters.PrimaryScreenWidth}" Background="LightGray" WindowStartupLocation="CenterScreen">
+        Title="SCADA SISTEM" WindowState="Maximized" Height="{x:Static SystemParameters.PrimaryScreenHeight}" Width="{x:Static SystemParameters.PrimaryScreenWidth}" Background="LightGray" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
@@ -228,16 +228,15 @@
         <Grid Grid.Row="1" Grid.Column="0" Margin="20,66,20,10" Background="#FF5E5E5E" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <ContentControl Content="{Binding CurrentMeshViewModel}"/>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="304,176,867,369" Height="27">Pump 1 power(w)</Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="304,359,867,186" Height="27">Pump 2 power(w)</Label>
+			<Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="304,359,867,186" Height="27" Visibility="{Binding GaugePower2Visibility}">Pump 2 power(w)</Label>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,404,50,141" Height="27">Fluid Level(l)</Label>
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="934,176,218,369" Height="27">Pump 1 Pressure(bar)</Label>
             <Label HorizontalContentAlignment="Center" Content="Tap Changer position" FontFamily="Consolas" Foreground="Yellow" FontSize="14" Margin="874,404,254,141" Height="27"></Label>
-            <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,176,38,369" Height="27" Content="Pump 2 Pressure(bar)"/>
+			<Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,176,38,369" Height="27" Visibility="{Binding GaugePressure2Visibility}" Content="Pump 2 Pressure(bar)"/>
         </Grid>
 
         <!--<Canvas Background="#FF474747" Margin="10,152,20,35" Grid.Row="2" Grid.RowSpan="2" Grid.ColumnSpan="2"/>-->
 
-        <Label Content="{Binding PubSub}" Margin="10,111,10,0" Grid.Row="1" VerticalAlignment="Top" Height="10" Grid.ColumnSpan="2"/>
         <StatusBar Margin="10,11,10,0" Grid.Row="3" Grid.ColumnSpan="2">
             <StatusBarItem>
                 <Label Content="{Binding TimeStampStatusBar}"   />
@@ -285,7 +284,7 @@
 
 
 
-        <lvc:Gauge Grid.Row="1"
+        <lvc:Gauge Grid.Row="1" Visibility="{Binding GaugePower2Visibility}"
             From="0" To="1000" Value="{Binding GaugePower2}" Margin="122,335,886,66" Grid.Column="1">
             <lvc:Gauge.GaugeActiveFill>
                 <LinearGradientBrush>
@@ -343,7 +342,7 @@
         <Button  Content="Analytics" HorizontalAlignment="Left" Command="{Binding AnalyticsOpenCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="122,22,0,0" VerticalAlignment="Top" Width="118" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFBB558D" Foreground="White" BorderBrush="#FFC5C5C5" Grid.Column="1"/>
         <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="952,111,86,234"
             Uses360Mode="True"
-            From="0" To="50" Value="{Binding GaugePressure2}"
+            From="0" To="50" Value="{Binding GaugePressure2}" Visibility="{Binding GaugePressure2Visibility}"
             HighFontSize="20" Foreground="White"
             InnerRadius="0" GaugeBackground="#7F549EE9"/>
 
