--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UserInterface.MainWindow"
+﻿<mah:MetroWindow x:Class="UserInterface.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,9 @@
         xmlns:views="clr-namespace:UserInterface.View"
         xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="SCADA SISTEM" Height="{x:Static SystemParameters.PrimaryScreenHeight}" Width="{x:Static SystemParameters.PrimaryScreenWidth}" Background="LightGray" WindowStartupLocation="CenterScreen">
+        Title="SCADA SISTEM" Height="{x:Static SystemParameters.PrimaryScreenHeight}" Width="{x:Static SystemParameters.PrimaryScreenWidth}" Background="LightGray" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
@@ -218,15 +219,8 @@
             <RowDefinition Height="189*"/>
             <RowDefinition Height="51*"/>
         </Grid.RowDefinitions>
-
-        <!--<DockPanel Margin="15,50,0,0" Grid.Row="1" Grid.Column="1" Background="#FF474747">
-            <Menu DockPanel.Dock="Top" Name="MenuTab" HorizontalContentAlignment="Center"  Background="#FF474747" Height="716" Margin="31,0,503.8,0">
-                <MenuItem Header="Point table" Command="{Binding NavigationCommand}" Height="25" CommandParameter="Points" Cursor="Hand" FontFamily="Consolas" FontSize="16" Background="#68CADE" Foreground="White" BorderBrush="#FFC5C5C5"/>
-                <MenuItem Header="Alarm table" Command="{Binding NavigationCommand}" Height="25" CommandParameter="Alarm" Cursor="Hand" FontFamily="Consolas" FontSize="16" Background="#FFFF6D6D" Foreground="White" BorderBrush="#FFC5C5C5"/>
-            </Menu>
-        </DockPanel>-->
+        
         <Grid Grid.Row="1" Grid.Column="1" Margin="12,66,20,10" Background="White" Grid.ColumnSpan="2" Grid.RowSpan="2">
-
             <ContentControl Content="{Binding CurrentMeshViewModel}"/>
             <Label HorizontalContentAlignment="Center" FontSize="16" FontFamily="Calibri" Margin="1011,10,356,642">Pump 1 power [w]</Label>
             <Label HorizontalContentAlignment="Center" FontSize="16" FontFamily="Calibri" Margin="1267,10,97,642" Visibility="{Binding GaugePower2Visibility}">Pump 2 power [w]</Label>
@@ -236,14 +230,12 @@
             <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Margin="1116,176,38,369" Height="27" Visibility="Hidden" Content="Pump 2 Pressure(bar)"/>
         </Grid>
 
-        <!--<Canvas Background="#FF474747" Margin="10,152,20,35" Grid.Row="2" Grid.RowSpan="2" Grid.ColumnSpan="2"/>-->
-
-        <lvc:AngularGauge Grid.Row="1" Value="{Binding TransformerTapChanger}" FromValue="-7" ToValue="7" 
+        <lvc:AngularGauge Grid.Row="1" Value="{Binding TransformerTapChanger}" FromValue="0" ToValue="14" 
                           LabelsStep="1" TicksStep="1" Wedge="300"
                           TicksForeground="Black" Foreground="Black" FontSize="10" 
                           SectionsInnerRadius="0.5" Margin="202,125,947,327" Grid.Column="2">
             <lvc:AngularGauge.Sections>
-                <lvc:AngularSection FromValue="-7" ToValue="7" Fill="#FF29ABBF"/>
+                <lvc:AngularSection FromValue="0" ToValue="14" Fill="#FF29ABBF"/>
             </lvc:AngularGauge.Sections>
         </lvc:AngularGauge>
 
@@ -263,8 +255,6 @@
                    From="0" To="50" Value="{Binding GaugePressure1}"
                    HighFontSize="20" Foreground="White"
                    InnerRadius="0" GaugeBackground="#7F549EE9"/>
-
-
 
         <lvc:Gauge Grid.Row="1" Visibility="{Binding GaugePower2Visibility}"
             From="0" To="1000" Value="{Binding GaugePower2}" Margin="1041,111.383,114,311.617" Grid.Column="2">
@@ -292,7 +282,7 @@
             From="0" To="50" Value="{Binding GaugePressure2}" Visibility="Hidden"
             HighFontSize="20" Foreground="White"
             InnerRadius="0" GaugeBackground="#7F549EE9"/>
-        <Canvas Grid.Column="2" HorizontalAlignment="Left" Height="74" Margin="76,0,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="1277" Opacity="0.7" Background="#FFE6E6E6">
+        <Canvas Grid.Column="2" HorizontalAlignment="Left" Height="74" Margin="85.4,0,-0.4,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="1215" Opacity="0.7" Background="#FFE6E6E6">
             <Button  Content="Analytics" HorizontalAlignment="Left" Command="{Binding AnalyticsOpenCommand}" CommandParameter="Event" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="0" VerticalAlignment="Top" Width="162" FontFamily="Calibri" FontSize="18" Background="#FF29ABBF" Foreground="White" BorderBrush="#FFC5C5C5" Canvas.Left="70" Canvas.Top="18"/>
             <Button  Content="Telemetry Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Summary" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="0" VerticalAlignment="Top" Width="162" FontFamily="Calibri" FontSize="18" Background="#FF29ABBF" Foreground="White" BorderBrush="#FFC5C5C5" Canvas.Left="382" Canvas.Top="16"/>
             <Button  Content="Alarm Table" HorizontalAlignment="Left" Command="{Binding ButtonTablesCommand}" CommandParameter="Alarm" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="0" VerticalAlignment="Top" Width="164" FontFamily="Calibri" FontSize="18" Background="#FF29A2BF" Foreground="White" BorderBrush="#FFC5C5C5" Canvas.Left="709" Canvas.Top="16"/>
@@ -349,7 +339,6 @@
 
         </Canvas>
 
-
         <!--<Border x:Name="AlarmBorder" Visibility="Visible" BorderBrush="Crimson" BorderThickness="10" HorizontalAlignment="Left" Height="820" Margin="0,0,0,0" VerticalAlignment="Top" Width="1512" Grid.RowSpan="3"></Border>-->
     </Grid>
-</Window>
+</mah:MetroWindow>
