--- a/UserInterface/TablesWindow.xaml
+++ b/UserInterface/TablesWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UserInterface.TablesWindow"
+﻿<mah:MetroWindow x:Class="UserInterface.TablesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:UserInterface"
         xmlns:views="clr-namespace:UserInterface.View"
         xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="Table Window" Height="800" Width="1000" Background="LightGray" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
 
@@ -21,9 +22,10 @@
         </DataTemplate>
     </Window.Resources>
 
-    <Grid Background="#FF474747">
+    <Grid Background="#FFE6E6E6">
         <Grid.RowDefinitions>
-            <RowDefinition Height="740"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="720"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -32,8 +34,8 @@
             <ColumnDefinition Width="15"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="1" Grid.Column="1">
             <ContentControl Content="{Binding CurrentTableViewModel}"/>
         </Grid>
     </Grid>
-</Window>
+</mah:MetroWindow>
