--- a/UserInterface/View/TableView.xaml
+++ b/UserInterface/View/TableView.xaml
@@ -7,68 +7,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="900">
 
-    <UserControl.Resources>
-        <Style TargetType="DataGrid">
-            <!-- On mouse hover -->
-            <Setter Property="BorderBrush" Value="#FF999999" />
-            <Setter Property="HorizontalGridLinesBrush" Value="#DDDDDD" />
-            <Setter Property="VerticalGridLinesBrush" Value="#DDDDDD" />
-
-            <Setter Property="RowStyle">
-                <Setter.Value>
-                    <Style TargetType="DataGridRow">
-                        <Setter Property="Background" Value="#A9A9A9" />
-                        <Style.Triggers>
-                            <!-- Highlight a grid row as the mouse passes over -->
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF999999" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="CellStyle">
-                <Setter.Value>
-                    <Style TargetType="DataGridCell">
-                        <!-- Add some padding around the contents of a cell -->
-                        <Setter Property="Padding" Value="4,3,4,3" />
-                        <Setter Property="BorderBrush" Value="Transparent"/>
-                        <Setter Property="BorderThickness" Value="1"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="DataGridCell">
-                                    <Border Padding="{TemplateBinding Padding}" 
-                                            BorderBrush="{TemplateBinding BorderBrush}"
-                                            BorderThickness="{TemplateBinding BorderThickness}"
-                                            Background="{TemplateBinding Background}">
-                                        <ContentPresenter />
-                                    </Border>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Setter Property="FocusVisualStyle">
-                            <Setter.Value>
-                                <Style TargetType="Control">
-                                    <Setter Property="BorderBrush" Value="Transparent" />
-                                </Style>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
-
     <Grid>
         <DataGrid x:Name="SubstationItems"
                   ItemsSource="{Binding SubstationItems, UpdateSourceTrigger=PropertyChanged}"
                   IsReadOnly="True"
                   VerticalScrollBarVisibility="Auto"
+                  BorderThickness="3" BorderBrush="#FF29ABBF"
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
                   CanUserResizeRows="False"
-                  CanUserAddRows="False" Grid.Column="1" Background="#A9A9A9" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
-            <DataGrid.Columns>
+                  CanUserAddRows="False" Grid.Column="1" Background="White" Grid.Row="1" FontFamily="Calibri" FontSize="14" >
+            <DataGrid.Columns >
                 <DataGridTextColumn Header="Name" Width="*"  Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
                 <DataGridTextColumn Header="Value" Width="*" Binding="{Binding Value}"/>
